<resources>
    <string name="app_name">Pizza Butler</string>
    <string name="nutzerDaten">Ihre Daten</string>
    <string name="benutzername_hint">Email</string>
    <string name="passwort_hint">Passwort</string>
    <string name="passwort_match">Passwort erneut eingeben</string>
    <string name="vorname_hint">Vorname</string>
    <string name="nachname_hint">Nachname</string>
    <string name="strasse_hint">Straße</string>
    <string name="nummer_hint">Hausnummer</string>
    <string name="plz_hint">Postleitzahl</string>
    <string name="ort_hint">Ort</string>
    <string name="telnr_hint">Telefonnummer</string>
    <string name="email_hint">Email</string>
    <string name="passwort_fehler">Das Passwort muss zwischen 8 und 12 Zeichen beinhalten</string>
    <string name="passwort_check_fehler">Bitte Passwort erneut eingeben</string>
    <string name="agb_fehler">Bitte akzeptieren Sie die AGBs</string>
    <string name="name">Ihr Name: </string>
    <string name="adresse">Ihre Adresse: </string>
    <string name="email">Ihre Email: </string>
    <string name="zustimmungAGB">Sie haben unseren AGBs und der Datenschutzerklärung zugestimmt.</string>
    <string-array name="anrede">
        <item>Herr</item>
        <item>Frau</item>
    </string-array>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="registrieren">Registrieren</string>
    <string name="weiter">Weiter</string>
    <string name="passwort_vergessen">Passwort vergessen?</string>
    <string name="agb">Ich akzeptiere die AGB und Datenschutz-Richtlinien</string>
    <string name="dialog">"Zur Zeit kann nicht auf ihren Standort zugegriffen werden. \nBitte aktivieren Sie den Standortzugriff."</string>
    <string name="status_code_404">Bitte überprüfen Sie Ihre Internet-Verbindung</string>
    <string name="status_code_500">Ups, unsere Server werden gerade gewartet</string>
    <string name="status_code_else">Etwas ist schrecklich schief gelaufen, bitte versuchen Sie es später noch einmal</string>
    <string name="rückgabewert_minus1">E-Mail oder Passwort ungültig</string>
    <string name="rückgabewert_minus2">Sie müssen sich erst registrieren</string>
    <string name="button_start">WO WOHNST DU?</string>
    <string name="text_start">...stets zu deinen &#xA; &#009; &#009; &#009; &#009; &#009; Diensten</string>
    <string name="twitter_post">Pizza Butler stets zu meinen Diensten und immer mit der besten Pizza #PizzaButler #DHBW #WWI13AMB</string>
    <string-array name="nav_drawer_items">
        <item>Login</item>
        <item>Pizzaria Übersicht</item>
        <item>Teilen</item>
        <item>Datenschutz</item>
        <item>AGB</item>
        <item>Impressum</item>

    </string-array>
    <string name="bestaetigung">Vielen Dank für Ihre Bestellung. Eine email wurde an die hinterlegte Adresse gesendet.</string>
    <string name="impressum_komplett">\nBetreiber der App von PizzaButler ist der Kurs WWI13AMB
        \ninfo@PizzaButtler.de
        \nGeschäftsführer: Alexander Zur, Christoph Flick\n
        \nRechtliche Hinweise\n

        \nDie yd. yourdelivery GmbH behält sich alle Rechte an den eigenen redaktionellen Texten, eigenen Bildern, eigenen
        Grafiken, sowie an dem gesamten Design inklusive Layout-, Schrift- und Farbgestaltung der Websites vor. Die
        Vervielfältigung und Verwendung dieser Informationen und/oder Daten, sowie jegliche Art von Kopie oder
        Reproduktion bedarf der vorherigen schriftlichen Zustimmung der yd. yourdelivery GmbH. Zuwiderhandlungen werden
        rechtlich verfolgt. Die rechtlichen Rahmenbedingungen unserer App entnehmen Sie bitte unseren Allgemeinen
        Geschäftsbedingungen.</string>
</resources>