<?xml version="1.0" encoding="utf-8"?>

<!-- Navigation Drawer Layout -->
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- The main content view -->
    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@android:color/white">

            <EditText
                android:id="@+id/benutzername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/benutzername_hint"
                android:inputType="textEmailAddress"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:layout_marginTop="16dp"/>

            <com.maksim88.passwordedittext.PasswordEditText
                android:id="@+id/passwort_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwort_hint"
                android:maxLength="12"
                android:inputType="textPassword"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                app:pet_iconShow="@drawable/ic_visibility_on"
                app:pet_iconHide="@drawable/ic_visibility_off"
                android:layout_marginBottom="32dp"/>


                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:onClick="logIn"
                    android:text="@string/login"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:textSize="8pt"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_margin="8dp"/>
        </LinearLayout>

    </FrameLayout>

    <!-- The navigation drawer -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#1a1c25"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp" />
</android.support.v4.widget.DrawerLayout>